[gd_scene load_steps=5 format=3 uid="uid://b3qkdml2wx1r"]

[ext_resource type="Script" path="res://UI/WeaponInventory.gd" id="1_weapon_inventory"]
[ext_resource type="Texture2D" uid="uid://c1qy43cvqc4cw" path="res://sprites/weapons/pistolFrame.png" id="2_pistol_frame"]
[ext_resource type="Texture2D" uid="uid://cf7a812jkwdai" path="res://sprites/weapons/riffleFrame.png" id="3_riffle_frame"]
[ext_resource type="Texture2D" uid="uid://dqabdkb24lc0m" path="res://sprites/weapons/sniperFrame.png" id="4_sniper_frame"]

[node name="WeaponInventory" type="Control"]
layout_mode = 3
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_weapon_inventory")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 250.0
offset_top = 20.0
offset_right = 370.0
offset_bottom = 80.0
theme_override_constants/separation = 10

[node name="Slot1" type="Panel" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 50)

[node name="Border" type="NinePatchRect" parent="HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(1, 1, 1, 1)

[node name="WeaponIcon" type="TextureRect" parent="HBoxContainer/Slot1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
expand_mode = 1
stretch_mode = 5

[node name="Slot2" type="Panel" parent="HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(50, 50)

[node name="Border" type="NinePatchRect" parent="HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(1, 1, 1, 1)

[node name="WeaponIcon" type="TextureRect" parent="HBoxContainer/Slot2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
expand_mode = 1
stretch_mode = 5 